# OHCA-registry-Slovenia

./: .gitignore  404.md  CNAME  COPYRIGHT  Dockerfile  Gemfile  LICENSE  Pipfile  Publication.md  README.md  _config.yml  about.md  compose.yml  contacts.md  docker-compose.yml  generate.py  index.md  packages.txt  requirements.txt  tags.md  utstein.sample.json  utstein.values.en.json  utstein.values.sl.json
.github/workflows/: rebuild-docker-base-dev.yml  redeploy-dev.yml  scraper-population.yml
_data/: awards.csv  press.csv  publications.csv
_includes/: Header.html  Homepage.html  Recent.html  Related.html
_layouts/: Post.html
_posts/: 2022-03-3-test.md  2022-04-20-see you in Glasgow.md  2022-05-02-We have a brand new graphics.md  2022-05-03-We were on a GRA meeting (day 1).md  2022-05-03-We were on a GRA meeting.md  2022-05-04-EMS2022 Glasgow (day 2).md  2022-05-05-TED talks (day 3).md  2022-05-05-Thank you EMS2022.md  2022-05-05-end of congress (day 4).md  2022-05-07-Thank you EMS2022.md  2022-05-16-See you in Portorož.md  2022-05-25-Thank you Arnes.md  2022-05-31-Collaboration announcement with Computel.md  2022-06-03-Find us at SZAIM 2022.md  2022-06-06-ERB approval.md  2022-06-10-EuReCa 3 and SiOHCA.md  2022-06-19-SZUM_2022.md  2022-07-01-MI 2022 keynote.md  2022-07-13-End of Student Challenges Grant.md  2022-08-31-SiOHCA is going live.md  2022-08-31-SiOHCA_is_going_live  2022-08-31-SiOHCA_is_going_live.md  2022-10-02-SZAIM 2022 Ljubljana.md  2022-10-03-Better and looking into the future.md  2022-10-11 SiOHCA has support  2022-10-11-SiOHCA endorsements.md  2022-10-11-SiOHCA has support.md  2022-10-12-See you in Kiel.md  2022-10-17-Arnes_mreza_znanja.md  2022-11-11-tavcarjevi2022.md  2022-11-25-We got awarded new grant.md  2022-12-04-Zunaj ali izvenbolnisnicni srcni zastoj?-2.md  2022-12-09-Digital innovation challenge competition.md  2022-12-11-new members of the team.md  2022-17-10-Arnes.md  20220330.md  2023-02-11-OHCA registry in Slovenia.md  2023-03-01-digital-health-conference.md  2023-03-10-popri competition.md  2023-03-13-siohca gethering.md  (+7 more)
assets/css/: Util.css  main.css  style.css
assets/img/: 2023-10-11-SiOHCA-earns-3rd-place.md  better_ai.HEIC  rokluka.heic  siemens_ai.HEIC
assets/js/: eureca.js  faq.js  questionsAndAnswers.csv
data/: main_data_flow.py
data/Population_served/: population.py
data/Serving_population/: covering.csv  covering.xlsx  population.py  preparation.py
data/images/: file.html
data/population/: enote_nmp.csv  enote_nmp.xlsx  hospitals.csv  hospitals.xlsx  population.csv  population.xlsx  preb.csv  preb.xlsx
data/supplementary/: data-flow.py  (+1 more)
database/: utstein.sample.json  utstein.values.en.json  utstein.values.sl.json
licenses/: Base MIT
ohca/: asgi.py  auxiliary.py  dataSummary.py  eureca_export.py  eureca_variables.json  examples.py  fields.py  forms.py  functions.py  middleware.py  models.py  settings.py  suppl.py  urls.py  utstein.values.en.json  variables.json  views.py  widget.py  wsgi.py
ohca-utstein/: .env.example  .gitignore  Cargo.toml  README.md  index.html  railwind.config.ron  railwind.css  sqlx-data.json  utstein.html
ohca-utstein/src/: confidence_Intervals.rs  confidence_intervals.rs  index.html  lib.rs  main.rs  types.rs  util.rs  utils.rs
ohca-utstein/src/utstein/: bystander_response.rs  core.rs  dispatcher_cpr.rs  dispatcher_id_ca.rs  ems_process.rs  etiology.rs  hospital_process.rs  location.rs  mod.rs  patient.rs  patient_outcomes.rs  resc_attempted.rs  resc_not_attempted.rs  witnessed.rs
pages/: 404.html  about.md  contacts.md  eureca.md  faq.md  index.md
tools/anonymize/: Cargo.toml
tools/anonymize/src/: main.rs
(+36 files in other folders)
