[package]
name = "siohca-utstein"
description = "Utstein export script for the registry"
license-file = "../LICENSE"
homepage = "https://github.com/SterArcher/OHCA-registry-Slovenia"
repository = "https://github.com/SterArcher/OHCA-registry-Slovenia/tree/api-dev/ohca-utstein"
readme = "README.md"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls" , "mysql", "uuid", "bigdecimal", "time" ] }
tokio = { version = "1.26.0", features = ["full"] }

dotenvy = "0.15.6"
time = { version = "0.3.20", features = ["parsing", "formatting"] }
chrono = "0.4.24"
bigdecimal = "0.3.0"
uuid = { version = "1.3.0", features = ["serde"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"