[package]
name = "ohca-utstein"
description = "Utstein export script for the OHCA registry"
license-file = "../LICENSE"
homepage = "https://github.com/SterArcher/OHCA-registry-Slovenia"
repository = "https://github.com/SterArcher/OHCA-registry-Slovenia/tree/api-dev/ohca-utstein"
readme = "README.md"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls" , "mysql", "uuid", "bigdecimal", "time", "offline" ] }
tokio = { version = "1.27.0", features = [ "full" ] }

dotenvy = "0.15.7"
time = { version = "0.3.20", features = [ "parsing", "formatting" ] }
chrono = "0.4.24"
bigdecimal = "0.3.0"
uuid = { version = "1.3.0", features = [ "serde" ] }
serde = { version = "1.0.159", features = [ "derive" ] }
serde_json = "1.0.95"
handlebars = "4.3.6"

clap = { version = "4.2.1", features = [ "derive" ]}
dialoguer = "0.10.3"

anyhow = "1.0.70"