[package]
name = "anonymize"
version = "0.1.0"
authors = ["gtomsic"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "*", features = ["wrap_help"]}
sha2 = {version = "*"}
unicode-bom = "1.1.0"
chrono = {version = "*"}