[package]
name = "anonymize"
version = "0.1.0"
authors = ["gtomsic"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1", features = ["wrap_help"]}
sha2 = {version = "0.10.2"}
unicode-bom = "1.1.0"
chrono = {version = "0.4.19"}